Fix pmd issues for annotation-processor-common