@@ -29,8 +29,8 @@ import javax.lang.model.type.DeclaredType;
 import javax.lang.model.type.TypeMirror;
 import java.util.List;
 
-import static io.rxmicro.annotation.processor.common.util.AnnotationProcessorEnvironment.getElements;
-import static io.rxmicro.annotation.processor.common.util.AnnotationProcessorEnvironment.getTypes;
+import static io.rxmicro.annotation.processor.common.util.ProcessingEnvironmentHelper.getElements;
+import static io.rxmicro.annotation.processor.common.util.ProcessingEnvironmentHelper.getTypes;
 import static io.rxmicro.annotation.processor.common.util.Elements.asTypeElement;
 import static io.rxmicro.annotation.processor.common.util.Elements.expectedGenericArgumentCount;
 import static io.rxmicro.annotation.processor.common.util.Elements.isGenericType;
@@ -135,7 +135,7 @@ public final class TypeValidators {
         if (type instanceof VirtualTypeMirror) {
             return ((VirtualTypeMirror) type).getVirtualTypeElement();
         } else {
-            final String validPrefix = prefix == null || prefix.trim().isEmpty() ? "" : prefix + ": ";
+            final String validPrefix = prefix == null || prefix.isBlank() ? "" : prefix + ": ";
             final Element element = getTypes().asElement(type);
             if (type.getKind() != DECLARED || !(element instanceof TypeElement)) {
                 throw new InterruptProcessingException(owner, "?? is not a class", validPrefix, type);
@@ -199,7 +199,7 @@ public final class TypeValidators {
     public static void validateGenericType(final Element owner,
                                            final TypeMirror type,
                                            final String prefix) {
-        final String validPrefix = prefix == null || prefix.trim().isEmpty() ? "" : prefix + ": ";
+        final String validPrefix = prefix == null || prefix.isBlank() ? "" : prefix + ": ";
         if (!isGenericType(type)) {
             throw new InterruptProcessingException(owner,
                     "?Expected generic type: ?", validPrefix, type);
